--- a/local/xdk/preferences.html
+++ b/local/xdk/preferences.html
@@ -39,7 +39,7 @@
 <a id="btnPreferences_update" style="display:none" href="#" onClick="savePreferences(opc);" data-icon="check"></a>
 </div>
 <div data-role="content" class="list-content">
-<img class="bg" src="img/bg.png" />
+<img class="bg" src="css/smt/bg.png" />
 <div id="fs-wrapper" class="fs-wrapper">
 <div id="scroller">
 <div class="smt-tag-content" style="text-align: left">
