--- a/local/xdk/storeOption.html
+++ b/local/xdk/storeOption.html
@@ -91,7 +91,7 @@ var formulario='<div id="scroller">'+
 '</div>'+
 '<div id="error"></div>'+
 '</div>';
-$('#storeOption').before('<img class="bg" src="img/bg.png" />').html(formulario).addClass('fs-wrapper');
+$('#storeOption').before('<img class="bg" src="css/smt/bg.png" />').html(formulario).addClass('fs-wrapper');
 $('#lstStoreOption').remove();
 break;
 } 
