--- a/local/xdk/signUp.html
+++ b/local/xdk/signUp.html
@@ -38,7 +38,7 @@
 <br>
 </div>
 <div data-role="content">
-<img class="bg" src="img/bg.png"/>
+<img class="bg" src="css/smt/bg.png"/>
 <div id="fs-wrapper" class="fs-wrapper">
 <div id="scroller">
 <form id="frmRegister" name="frmRegister" method="post" style="display:block;">
@@ -118,8 +118,8 @@ $('#repasswordLabel').html(lang.SIGNUP_PASSWORD2);
 $('#msgPassword').html(lang.USERPROFILE_PASSWORD);
 $('#msgRequired').html(lang.REQUIRED);
 $('#msgCreatedAccount').html(lang.TEXT_TERMS+'&nbsp;<a href="#" id="getTerms" data-rel="dialog" data-transition="pop">'+lang.TEXT_LINKTERMS+'</a>');
-$('#showFormIndividual').html('<span><img src="img/signup_personal.png"/></span> '+lang.JS_SIGNUP_INDIVIDUAL);
-$('#showFormEnterprise').html('<span><img src="img/signup_business.png"/></span> '+lang.JS_SIGNUP_ENTERPRISE);
+$('#showFormIndividual').html('<span><img src="css/smt/signup_personal.png"/></span> '+lang.JS_SIGNUP_INDIVIDUAL);
+$('#showFormEnterprise').html('<span><img src="css/smt/signup_business.png"/></span> '+lang.JS_SIGNUP_ENTERPRISE);
 $('#name,#lastName').attr({
 'autocapitalize':'word'
 });
