--- a/local/xdk/tag.html
+++ b/local/xdk/tag.html
@@ -16,7 +16,6 @@
 <link rel="stylesheet" href="css/colorPicker.css"/>
 <script src="cordova.js"></script>
 <!--<script src="http://debug.build.phonegap.com/target/target-script-min.js#82ad4bcc-195f-11e3-af04-22000a98b3d6"></script><!-- -->
-<script src="intelxdk.js"></script>
 <script src="js/core/const.js"></script>
 <script src="js/core/md5.js"></script>
 <script src="js/core/jquery-1.10.2.min.js"></script>
@@ -38,7 +37,7 @@
 <h1 class="tag-title is-logged"></h1>
 </div><!-- /header -->
 <div data-role="content">
-<img class="bg" src="img/bg.png"/>
+<img class="bg" src="css/smt/bg.png"/>
 <div id="fs-wrapper" class="fs-wrapper">
 <div id="scroller">
 <div id="noLoggedEmail" class="logoBackEmail" style="display:none;"></div>
