--- a/local/xdk/timeLine.html
+++ b/local/xdk/timeLine.html
@@ -54,7 +54,7 @@ left: 191px;
 <div style="position:absolute;top:0px;left:0;padding:0 5px;">
 <!--<a href="myMenu" style="position:relative;"><span class="btn-menu"></span><span class="push-notifications button" style="display:none;">0</span></a>-->
 <a href="#" class="showMenu" style="position:relative;"><span class="btn-menu showMenu"></span><span class="push-notifications button" style="display:none;">0</span></a>
-<a href="#" onclick="redir(PAGE['newtag'])"><img src="img/creation.png" /></a>
+<a href="#" onclick="redir(PAGE['newtag'])"><img src="css/smt/creation.png" /></a>
 </div>
 <h1><span class="loader"></span></h1>
 <div id="userPoints" class="ui-btn-right" data-iconshadow="true" data-wrapperels="span">
