--- a/local/xdk/notifications.html
+++ b/local/xdk/notifications.html
@@ -31,6 +31,24 @@
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
 <script src="js/min.js"></script>
+<!-- Facebook Conversion Code for Tagbum -->
+<script>(function() {
+var _fbq = window._fbq || (window._fbq = []);
+if (!_fbq.loaded) {
+var fbds = document.createElement('script');
+fbds.async = true;
+fbds.src = '//connect.facebook.net/en_US/fbds.js';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(fbds, s);
+_fbq.loaded = true;
+}
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6018767308743', {'value':'0.00','currency':'USD'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6018767308743&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+<!-----------------------------End facebook ---------------------------->
+<meta name="alexaVerifyID" content="8YYp0pS3o8YkprRdkaeFqitio5Q"/>
 </head><body><div id="page-notif" data-role="page" data-cache="false" class="no-footer">
 <div data-role="header" data-position="fixed" data-theme="f"><h1></h1></div>
 <div data-role="content" class="list-content">
@@ -75,7 +93,7 @@ usrs+='<b>'+usr[i]['name']+'</b>';
 return usrs;
 }
 function newsFormat(d){return(
-'<li type="'+d.type+'" date="'+d.date+'" source="'+d.source+'" class="ui-li-has-thumb'+(d.rev>1?' notiRevi':' notiNoRevi')+'" '+(d.rev>1?'':'t="'+d.tipo+'" f="'+d.allsource+'"')+'>'+
+'<li data-type="'+d.type+'" date="'+d.date+'" data-source="'+d.source+'" class="ui-li-has-thumb'+(d.rev>1?' notiRevi':' notiNoRevi')+'" '+(d.rev>1?'':'data-t="'+d.tipo+'" data-f="'+d.allsource+'"')+'>'+
 '<a>'+
 // '<img src="'+d.photo+'"/>'+
 '<div class="ui-li-thumb'+(d.pic?' '+d.pic:'')+''+(d.bord?' userBR':'')+'"'+(d.photo?' style="background-image:url('+FILESERVER+d.photo+');"':'')+'/>'+
@@ -229,21 +247,26 @@ autodividersCounter:true,
 autodividersSelector: function ( $li ) {
 return $li.attr('date').match(/\w+(\s+\d+)?|\d+-\d+-\d+/)[0];
 }
-}).on('click','li[type]',function(){
-var type=$(this).attr('type'),source=$(this).attr('source');
-if ($(this).attr('t')){
-$.session('notif',{type:$(this).attr('t'),source:$(this).attr('f')});
+}).on('click','li[data-type]',function(){
+var type=this.dataset.type,
+source=this.dataset.source,
+url='';
+if(this.dataset.t){
+$.session('notif',{type:this.dataset.t,source:this.dataset.f});
 console.log($.session('notif'));
 }
 switch(type){
-case 'usr': redir(PAGE['profile']+'?id='+source); break;
-case 'tag': redir(PAGE['tag']+'?id='+source); break;
+case 'usr':url=PAGE['profile']+'?id='+source; break;
+case 'tag':url=PAGE['tag']+'?id='+source; break;
 case 'group':
 case 'order':
 case 'product':
 default: alert(type);
 }
-
+if(url){
+$(this).removeClass('notiNoRevi').addClass('notiRevi');
+redir(url);
+}
 });
 
 $wrapper.ptrScroll({
