--- a/local/xdk/lstgroups.html
+++ b/local/xdk/lstgroups.html
@@ -31,6 +31,24 @@
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
 <script src="js/min.js"></script>
+<!-- Facebook Conversion Code for Tagbum -->
+<script>(function() {
+var _fbq = window._fbq || (window._fbq = []);
+if (!_fbq.loaded) {
+var fbds = document.createElement('script');
+fbds.async = true;
+fbds.src = '//connect.facebook.net/en_US/fbds.js';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(fbds, s);
+_fbq.loaded = true;
+}
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6018767308743', {'value':'0.00','currency':'USD'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6018767308743&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+<!-----------------------------End facebook ---------------------------->
+<meta name="alexaVerifyID" content="8YYp0pS3o8YkprRdkaeFqitio5Q"/>
 </head><body><div id="page-lstGroups" data-role="page" data-cache="false" class="no-footer">
 <div data-role="header" data-position="fixed" data-theme="f">
 <h1 id="titleGroups">&nbsp;</h1>
@@ -114,17 +132,17 @@ out +=
 '<li group="'+pref['id']+'">'+
 '<img '+pref['photoi']+' class="ui-li-icon-group" width="30" height="30" />'+
 '<a class="linkGroup">'+pref['name']+'<br>'+
-'<div style="float: left; margin-left: 0px; font-size: 10px; text-align: left;font-weight: normal">'+pref['privacidad']+', '+lang.GROUPS_MEMBERS+' ('+pref['num_members']+'), '+lang.GROUPS_CREATED+' '+pref['fecha']+
-'<img src="'+pref['cphoto']+'" class="ui-li-icon-group" width="20" height="20" style="float: none; margin: 0px 5px;"/> '+lan('Category')+':'+pref['cname']+
+'<div style="float: left; margin-left: 0px; font-size: 10px; text-align: left;font-weight: normal"><img src="'+pref['cphoto']+'" class="ui-li-icon-group" width="20" height="20" style="float: none; margin: 0px 5px;"/><br>'+pref['privacidad']+', '+lang.GROUPS_MEMBERS+' ('+pref['num_members']+'), '+lang.GROUPS_CREATED+' '+pref['fecha']+
+' '+lan('Category')+':'+pref['cname']+
 '</div>'+
 '</a>'+
 '</li>';
-} 
+}
 if (limit!='') $('#group_title').append(out).listview('refresh');
 else $('#group_title').html(out).listview('refresh');
 $wrapper.jScroll('refresh');
 }
-}); 
+});
 }
 }
 });
