--- a/local/xdk/preferences.html
+++ b/local/xdk/preferences.html
@@ -31,6 +31,24 @@
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
 <script src="js/min.js"></script>
+<!-- Facebook Conversion Code for Tagbum -->
+<script>(function() {
+var _fbq = window._fbq || (window._fbq = []);
+if (!_fbq.loaded) {
+var fbds = document.createElement('script');
+fbds.async = true;
+fbds.src = '//connect.facebook.net/en_US/fbds.js';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(fbds, s);
+_fbq.loaded = true;
+}
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6018767308743', {'value':'0.00','currency':'USD'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6018767308743&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+<!-----------------------------End facebook ---------------------------->
+<meta name="alexaVerifyID" content="8YYp0pS3o8YkprRdkaeFqitio5Q"/>
 </head><body><script> var opc={type:1,dato:[]}; </script>
 <div id="page-preferences" data-role="page" data-cache="false">
 <div data-role="header" data-position="fixed" data-theme="f">
@@ -64,7 +82,7 @@
 <div data-role="navbar">
 <ul>
 <li><a id="labelChoosePre" class="ui-btn-active" onclick="redir(PAGE['preferences']);" >&nbsp;</a></li>
-<li><a id="labelSeekPre" onclick="redir(PAGE['seekpreferences']);">&nbsp;</a></li>
+<li><a id="labelSeekPre" onclick="redir(PAGE['seekpreferences']+'?type='+$('#typePre').val());">&nbsp;</a></li>
 <li><a id="labelMyPrefe" onclick="preferencesUsers();"></a></li>
 </ul>
 </div>
@@ -111,7 +129,7 @@ success :function(data){
 if (data['dato']){
 opc.dato[1]=configArray(data['dato'][1],true);
 opc.dato[2]=configArray(data['dato'][2],true);
-opc.dato[3]=configArray(data['dato'][3],true); 
+opc.dato[3]=configArray(data['dato'][3],true);
 }else opc.dato=new Array("","","","");
 $('#txtPrefe').val(opc.dato[opc.type]);
 $("#btnPreferences_update").show();
@@ -150,7 +168,7 @@ buttons:{
 'Close':function(){ this.close(); }
 }
 });
-else 
+else
 myDialog({
 id:'#prefeExitoDialog',
 content:'<br/>'+lang.TAG_DELETEDERROR+'<br/>',
