--- a/local/xdk/reportTag.html
+++ b/local/xdk/reportTag.html
@@ -31,6 +31,24 @@
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
 <script src="js/min.js"></script>
+<!-- Facebook Conversion Code for Tagbum -->
+<script>(function() {
+var _fbq = window._fbq || (window._fbq = []);
+if (!_fbq.loaded) {
+var fbds = document.createElement('script');
+fbds.async = true;
+fbds.src = '//connect.facebook.net/en_US/fbds.js';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(fbds, s);
+_fbq.loaded = true;
+}
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6018767308743', {'value':'0.00','currency':'USD'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6018767308743&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+<!-----------------------------End facebook ---------------------------->
+<meta name="alexaVerifyID" content="8YYp0pS3o8YkprRdkaeFqitio5Q"/>
 </head><body><div id="page-reportTag" data-role="page" data-cache="false">
 <div data-role="header" data-position="fixed" data-theme="f">
 <h1></h1>
@@ -76,12 +94,13 @@ $('#txt3').html('<strong>'+lang.ACTIONSTAGS_REPORTTAG_TITLESELECT+'</strong>');
 },
 after:function(){
 $('#id_tag').val($_GET['id']);
+console.log($('#id_tag').val($_GET['id']))
 //$('#tagReport').html(showTag({'idTag':$('#id_tag').val()}));
 $('#fs-wrapper').jScroll({hScroll:false});
 $('#btnReport').click(function(){
 myAjax({
 type : 'POST',
-url : DOMINIO+'controls/tags/actionsTags.controls.php?action=8&tag='+$('#id_tag').val()+'&type_report='+md5($('#selectReport option:selected').val()),
+url : DOMINIO+'controls/tags/actionsTags.controls.php?action=8&tag='+$_GET['id']+'&type_report='+md5($('#selectReport option:selected').val()),
 dataType: 'html',
 success : function (data){
 myDialog({
