--- a/local/xdk/resendPass.html
+++ b/local/xdk/resendPass.html
@@ -31,6 +31,24 @@
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
 <script src="js/min.js"></script>
+<!-- Facebook Conversion Code for Tagbum -->
+<script>(function() {
+var _fbq = window._fbq || (window._fbq = []);
+if (!_fbq.loaded) {
+var fbds = document.createElement('script');
+fbds.async = true;
+fbds.src = '//connect.facebook.net/en_US/fbds.js';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(fbds, s);
+_fbq.loaded = true;
+}
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6018767308743', {'value':'0.00','currency':'USD'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6018767308743&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+<!-----------------------------End facebook ---------------------------->
+<meta name="alexaVerifyID" content="8YYp0pS3o8YkprRdkaeFqitio5Q"/>
 </head><body><div id="page-resend" data-role="page" data-cache="false">
 <div data-role="header" data-position="fixed" data-theme="f">
 <a id="bntBack" data-icon="arrow-l" href="#"> </a>
@@ -131,7 +149,7 @@ switch(data['error']){
 case 'noPasCoin': cont=lang.RESETPASS_ERROR1; break;
 case 'pasMenorleng': cont=lang.USERPROFILE_PASSWORD; break;
 }
-showMsgError(cont,'#password|#repassword'); 
+showMsgError(cont,'#password|#repassword');
 }
 }
 });
@@ -161,8 +179,8 @@ case 'emailInvalid': cont=lang.EMAIL_ERROR; break;
 case 'emailNotExist': cont=lang.EMAIL_ERROR_NE; break;
 case 'notEmail': cont=lang.FORGOT_CTRMSGERROR; break;
 }
-showMsgError(cont,'#frmResend input'); 
-} 
+showMsgError(cont,'#frmResend input');
+}
 }
 });
 }else showMsgError(lang.SIGNUP_CTRERROREMAIL,'#frmResend input');
