--- a/local/xdk/seekPreferences.html
+++ b/local/xdk/seekPreferences.html
@@ -31,6 +31,24 @@
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
 <script src="js/min.js"></script>
+<!-- Facebook Conversion Code for Tagbum -->
+<script>(function() {
+var _fbq = window._fbq || (window._fbq = []);
+if (!_fbq.loaded) {
+var fbds = document.createElement('script');
+fbds.async = true;
+fbds.src = '//connect.facebook.net/en_US/fbds.js';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(fbds, s);
+_fbq.loaded = true;
+}
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6018767308743', {'value':'0.00','currency':'USD'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6018767308743&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+<!-----------------------------End facebook ---------------------------->
+<meta name="alexaVerifyID" content="8YYp0pS3o8YkprRdkaeFqitio5Q"/>
 </head><body><div id="page-seekPreferences" data-role="page" data-cache="false">
 <div data-role="header" data-position="fixed" data-theme="f"><h1></h1></div>
 <div data-role="content" class="list-content">
@@ -62,13 +80,14 @@ backButton:true,
 before:function(){
 //languaje
 $('#labelTypePrefe1').html(lang.PREFERENCES_WHATILIKE);
-$('#labelTypePrefe2').html(lang.PREFERENCES_WHATINEED);
-$('#labelTypePrefe3').html(lang.PREFERENCES_WHATIWANT);
+$('#labelTypePrefe2').html(lang.PREFERENCES_WHATIWANT);
+$('#labelTypePrefe3').html(lang.PREFERENCES_WHATINEED);
 $("#searchPreferences").attr('placeholder',lang.seek);
 $('.list-wrapper').jScroll({hScroll:false});
 },
 after:function(){
-getPreferences(1,'');//call
+if ($_GET['type']) $('#labelTypePrefe'+$_GET['type']).click();
+getPreferences(1);//call
 $('#group_preferences').on('click','li',function(){
 touchPreferences(this);
 });
