--- a/local/xdk/signUp.html
+++ b/local/xdk/signUp.html
@@ -31,6 +31,24 @@
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
 <script src="js/min.js"></script>
+<!-- Facebook Conversion Code for Tagbum -->
+<script>(function() {
+var _fbq = window._fbq || (window._fbq = []);
+if (!_fbq.loaded) {
+var fbds = document.createElement('script');
+fbds.async = true;
+fbds.src = '//connect.facebook.net/en_US/fbds.js';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(fbds, s);
+_fbq.loaded = true;
+}
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6018767308743', {'value':'0.00','currency':'USD'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6018767308743&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+<!-----------------------------End facebook ---------------------------->
+<meta name="alexaVerifyID" content="8YYp0pS3o8YkprRdkaeFqitio5Q"/>
 </head><body><div id="page-signUp" data-role="page" data-cache="false">
 <div data-role="header" data-position="fixed" data-theme="f">
 <h1></h1>
@@ -118,8 +136,8 @@ $('#repasswordLabel').html(lang.SIGNUP_PASSWORD2);
 $('#msgPassword').html(lang.USERPROFILE_PASSWORD);
 $('#msgRequired').html(lang.REQUIRED);
 $('#msgCreatedAccount').html(lang.TEXT_TERMS+'&nbsp;<a href="#" id="getTerms" data-rel="dialog" data-transition="pop">'+lang.TEXT_LINKTERMS+'</a>');
-$('#showFormIndividual').html('<span><img src="css/smt/signup_personal.png"/></span> '+lang.JS_SIGNUP_INDIVIDUAL);
-$('#showFormEnterprise').html('<span><img src="css/smt/signup_business.png"/></span> '+lang.JS_SIGNUP_ENTERPRISE);
+$('#showFormIndividual').html('<span><img src="css/smt/signup_personal.png" width="20" height="20" style="position: relative;top: 2px"/></span> '+lang.JS_SIGNUP_INDIVIDUAL);
+$('#showFormEnterprise').html('<span><img src="css/smt/signup_business.png" width="20" height="20"/></span> '+lang.JS_SIGNUP_ENTERPRISE);
 $('#name,#lastName').attr({
 'autocapitalize':'word'
 });
