--- a/local/xdk/chat/index.html
+++ b/local/xdk/chat/index.html
@@ -8,10 +8,13 @@
 		<link type="text/css" href="./css.css" rel="stylesheet" charset="utf-8">
 		<script>
 		var BASE_URL='http://tagbum.com/cometchat/';
+		var PAGE={
+			ini:'../timeLine.html'
+		};
 		</script>
-		<script src="./Chat_files/jquery.min.js"></script>		
-		<script type="text/javascript" charset="utf-8" src="./Chat_files/js.js"></script>
-		<script type="text/javascript" charset="utf-8" src="./Chat_files/js(1).js"></script>	
+		<script src="./files/jquery.min.js"></script>		
+		<script type="text/javascript" charset="utf-8" src="./files/js.js"></script>
+		<script type="text/javascript" charset="utf-8" src="./files/js(1).js"></script>	
 		<script>
             var isPhoneTouched = 0;
             document.addEventListener('touchstart', function() { 
@@ -88,7 +91,7 @@
 						<input type="text" id="searchtxt" onkeyup="jqcc.mobilewebapp.get_user();" placeholder="Search User">
 					</div>
 					<div class="row" id="userlist">
-						<ul id="wolist" class="small-12 columns"><li id="onlinelist_2" class="row userlists" onclick="javascript:jqcc.chatmobilewebapp.loadPanel(&#39;2&#39;)" data-filtertext="miPapitoRico"><div class="small-7 columns"><img src="./Chat_files/cleardot.gif" class=" status status-offline "><span class="longname search_name">miPapitoRico</span></div><div class="small-5 columns"><img src="./Chat_files/default.png" class=" avatarimage"><span class="newmessages">0</span></div></li><li id="onlinelist_184" class="row userlists" onclick="javascript:jqcc.chatmobilewebapp.loadPanel(&#39;184&#39;)" data-filtertext="ramon"><div class="small-7 columns"><img src="./Chat_files/cleardot.gif" class=" status status-offline "><span class="longname search_name">ramon</span></div><div class="small-5 columns"><img src="./Chat_files/default.png" class=" avatarimage"><span class="newmessages">0</span></div></li><li id="onlinelist_103" class="row userlists" onclick="javascript:jqcc.chatmobilewebapp.loadPanel(&#39;103&#39;)" data-filtertext="Rastashe I"><div class="small-7 columns"><img src="./Chat_files/cleardot.gif" class=" status status-offline "><span class="longname search_name">Rastashe I</span></div><div class="small-5 columns"><img src="./Chat_files/default.png" class=" avatarimage"><span class="newmessages">0</span></div></li><li id="onlinelist_101" class="row userlists" onclick="javascript:jqcc.chatmobilewebapp.loadPanel(&#39;101&#39;)" data-filtertext="YoElPipe"><div class="small-7 columns"><img src="./Chat_files/cleardot.gif" class=" status status-offline "><span class="longname search_name">YoElPipe</span></div><div class="small-5 columns"><img src="./Chat_files/default.png" class=" avatarimage"><span class="newmessages">0</span></div></li><li class="onlinelist row" id="wolast" style="background:none !important;"></li></ul>
+						<ul id="wolist" class="small-12 columns"><li id="onlinelist_2" class="row userlists" onclick="javascript:jqcc.chatmobilewebapp.loadPanel(&#39;2&#39;)" data-filtertext="miPapitoRico"><div class="small-7 columns"><img src="./files/cleardot.gif" class=" status status-offline "><span class="longname search_name">miPapitoRico</span></div><div class="small-5 columns"><img src="./files/default.png" class=" avatarimage"><span class="newmessages">0</span></div></li><li id="onlinelist_184" class="row userlists" onclick="javascript:jqcc.chatmobilewebapp.loadPanel(&#39;184&#39;)" data-filtertext="ramon"><div class="small-7 columns"><img src="./files/cleardot.gif" class=" status status-offline "><span class="longname search_name">ramon</span></div><div class="small-5 columns"><img src="./files/default.png" class=" avatarimage"><span class="newmessages">0</span></div></li><li id="onlinelist_103" class="row userlists" onclick="javascript:jqcc.chatmobilewebapp.loadPanel(&#39;103&#39;)" data-filtertext="Rastashe I"><div class="small-7 columns"><img src="./files/cleardot.gif" class=" status status-offline "><span class="longname search_name">Rastashe I</span></div><div class="small-5 columns"><img src="./files/default.png" class=" avatarimage"><span class="newmessages">0</span></div></li><li id="onlinelist_101" class="row userlists" onclick="javascript:jqcc.chatmobilewebapp.loadPanel(&#39;101&#39;)" data-filtertext="YoElPipe"><div class="small-7 columns"><img src="./files/cleardot.gif" class=" status status-offline "><span class="longname search_name">YoElPipe</span></div><div class="small-5 columns"><img src="./files/default.png" class=" avatarimage"><span class="newmessages">0</span></div></li><li class="onlinelist row" id="wolast" style="background:none !important;"></li></ul>
 						<div id="endoftext"></div>
 					</div>	
                 </div>
@@ -96,7 +99,7 @@
 						<div id="footer" class="row">
 				<div class="small-12 columns" id="footerbtns">
 					<ul class="button-group">
-						<li><a href="./Chat_files/Chat.html" id="buddy_link" class="small button chatlink btn-active"><div class="chatlink_icon" style="height: 30px; top: -1px;"><span class="notifier" style="display: none;">0</span></div><div class="chatlink_txt" style="display: block;">One-on-One Chat</div></a></li>
+						<li><a href="./files/Chat.html" id="buddy_link" class="small button chatlink btn-active"><div class="chatlink_icon" style="height: 30px; top: -1px;"><span class="notifier" style="display: none;">0</span></div><div class="chatlink_txt" style="display: block;">One-on-One Chat</div></a></li>
 						<li><a href="http://localhost/tag/cometchat/extensions/mobilewebapp/#lobby" id="chatroomlink" class="small button chatroomlink"><div class="chatroomlink_icon" style="height: 30px; top: -1px;"></div><div class="chatroomlink_txt" style="display: block;">Chatrooms</div></a></li>
 					</ul>
 				</div>
@@ -130,8 +133,8 @@
 				</div>		
 			</div>
 			<div id="opt" style="height: 35px;">
-				<div id="clear"><img src="./Chat_files/clearconversation.png">&nbsp;&nbsp;&nbsp;Clear Conversation</div>
-				<div id="report" style="display: none;"><img src="./Chat_files/report.png">&nbsp;&nbsp;Report Conversation</div>
+				<div id="clear"><img src="./files/clearconversation.png">&nbsp;&nbsp;&nbsp;Clear Conversation</div>
+				<div id="report" style="display: none;"><img src="./files/report.png">&nbsp;&nbsp;Report Conversation</div>
 			</div>
 			<div id="chatcontent" style="overflow-y: scroll; height: 508px; width: 100%; bottom: 50px; min-height: 508px; max-height: 508px;">
 				<div id="scroller">
@@ -190,7 +193,7 @@
 						<div id="footer" class="row">
 				<div class="small-12 columns" id="footerbtns">
 					<ul class="button-group">
-						<li><a href="./Chat_files/Chat.html" id="buddy_link" class="small button chatlink btn-active"><div class="chatlink_icon" style="height: 30px; top: -1px;"><span class="notifier" style="display: none;">0</span></div><div class="chatlink_txt" style="display: block;">One-on-One Chat</div></a></li>
+						<li><a href="./files/Chat.html" id="buddy_link" class="small button chatlink btn-active"><div class="chatlink_icon" style="height: 30px; top: -1px;"><span class="notifier" style="display: none;">0</span></div><div class="chatlink_txt" style="display: block;">One-on-One Chat</div></a></li>
 						<li><a href="http://localhost/tag/cometchat/extensions/mobilewebapp/#lobby" id="chatroomlink" class="small button chatroomlink"><div class="chatroomlink_icon" style="height: 30px; top: -1px;"></div><div class="chatroomlink_txt" style="display: block;">Chatrooms</div></a></li>
 					</ul>
 				</div>
@@ -357,9 +360,9 @@
 		var path = $(location).attr('href');
                 $('#buddyhome').css('display','block');
                 $('#lobbyhome').css('display','block');
-                $('#buddyhome').click(function() { window.location.href = '';});
+                $('#buddyhome').click(function() { window.location.href = PAGE.ini;});
                 $('#lobbyhome').click(function() { $('#buddyhome').click();});
-                var arr = path.split('/extensions/mobilewebapp/')[1];
+                var arr = path.split('/chat/')[1];
 		var showdiv = arr;		
 		if(enableType == 2 || enableType == 0){
 			jqcc.mobilewebapp.pathRedirect(showdiv);
