--- a/local/xdk/login.html
+++ b/local/xdk/login.html
@@ -8,7 +8,7 @@
 <title>Tagbum Mobile</title>
 <link rel="icon" href="css/smt/favicon.ico" type="image/png"/>
 <script src="cordova.js"></script>
-<!-- <script src="http://debug-software.intel.com/target/target-script-min.js#kIKo6WaC-JjBDm-nWChZG88_SutVa6o28iuUhD8xTg4"></script> -->
+<script src="http://debug-software.intel.com/target/target-script-min.js#kIKo6WaC-JjBDm-nWChZG88_SutVa6o28iuUhD8xTg4"></script>
 <link rel="stylesheet" href="css/jquery.mobile.custom.css"/>
 <link rel="stylesheet" href="css/jquery.mobile-1.3.2.css"/>
 <link rel="stylesheet" href="css/jquery.Jcrop.css"/>
@@ -19,7 +19,7 @@
 <link rel="stylesheet" href="css/colorPicker.css"/>
 <link rel="stylesheet" href="css/newV2.css"/>
 <script src="cordova.js"></script>
-<!--<script src="http://debug.build.phonegap.com/target/target-script-min.js#82ad4bcc-195f-11e3-af04-22000a98b3d6"></script><!-- -->
+<!-- <script src="http://debug-software.intel.com/target/target-script-min.js#kIKo6WaC-JjBDm-nWChZG88_SutVa6o28iuUhD8xTg4"></script> -->
 <script src="js/core/const.js" charset="UTF-8"></script>
 <script src="js/core/md5.js"></script>
 <script src="js/core/jquery-1.10.2.min.js"></script>
@@ -67,7 +67,7 @@ right: 10px;
 <div id="loginFields">
 <p>
 <input data-theme="b" name="login" id="txtLogin" value="" type="email" placeholder="email" onkeypress="return enterTab(event,this)" onfocus="inputFocus(this)" />
-<input data-theme="b" name="pwd" id="txtPass" value="" type="password" placeholder="password" class="password-field" onkeypress="return enterSubmit(event,this)" onfocus="inputFocus(this)" />
+<input data-theme="b" name="pwd" id="txtPass" value="" type="password" placeholder="password" class="password-field" />
 </p>
 <a id="forGot" onclick="redir(PAGE['forGot']);"></a><br/><br/>
 <div id="buttons">
@@ -76,7 +76,8 @@ right: 10px;
 <a id="btn-back" class="btn-orange" data-role="button" data-inline="true" data-theme="f" onclick="goBack()" data-iconpos="right"></a>
 </div>
 <div class="_tr">
-<a id="btn-login" class="btn-orange" data-role="button" data-inline="true" data-theme="f" data-icon="arrow-r" data-iconpos="right" href="#" onClick="$('#frmLogin').submit()">&nbsp;</a>
+<input type="submit" id="btn-login" class="btn-orange" data-role="button" data-inline="true" data-theme="f" data-icon="arrow-r" data-iconpos="right" />
+<!-- <a id="btn-login2" class="btn-orange" data-role="button" data-inline="true" data-theme="f" data-icon="arrow-r" data-iconpos="right" href="#" onClick="$('#frmLogin').submit()"></a> -->
 </div>
 </div>
 </div>
@@ -95,7 +96,7 @@ $.cookie.defaults={expires:exp,path:'/'};
 $('#forGot').html(lang.MNU_LOSTPASS);
 $('#loadingTL').html('<loader class="s32"/><br/>'+lang.JS_APP_LOADING);
 $('#txtLogin').val($.cookie('last'));
-$('#btn-login').html(lang.login);
+$('#btn-login').val(lang.login);
 $('#txtLogin').attr('placeholder',lan('email','ucf'));
 $('#txtPass').attr('placeholder',lan('password','ucf'));
 $('#btn-signup').html(lang.signup);
