--- a/local/xdk/newtag.html
+++ b/local/xdk/newtag.html
@@ -402,7 +402,7 @@ panzoom.panzoom('resetDimensions')
 
 if(CORDOVA){
 document.addEventListener('deviceready',function(){
-alert('Device ready no');
+//alert('Device ready no');
 var cam=Camera,
 photoData={
 targetWidth:650,
