--- a/local/xdk/findFriends.html
+++ b/local/xdk/findFriends.html
@@ -7,6 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Tagbum Mobile</title>
 <link rel="icon" href="css/smt/favicon.ico" type="image/png"/>
+
 <script src="cordova.js"></script>
 <link rel="stylesheet" href="css/jquery.mobile.custom.css"/>
 <link rel="stylesheet" href="css/jquery.mobile-1.3.2.css"/>
@@ -47,17 +48,13 @@
 </div>
 <div class="list-wrapper">
 <div id="scroller">
+<div data-role="navbar"><ul id="friendsFooter"></ul></div>
 <!-- lista de contactos del tlf -->
 <ul data-role="listview" data-divider-theme="e" id="contactFilter" class="contacts"></ul>
 <ul data-role="listview" data-divider-theme="e" id="contactList" class="contacts"></ul>
 <!-- busqueda en fagbum -->
 <ul class="list-friends ui-grid-b" id="friendsList"></ul>
 </div>
-</div>
-</div>
-<div id="footer" data-role="footer" data-position="fixed" data-theme="f">
-<div data-role="navbar">
-<ul id="friendsFooter"></ul>
 </div>
 </div>
 </div><!-- /page -->
@@ -198,7 +195,7 @@ if(!emails.length&&!phones.length)
 $('#contactFilter').html('');
 else
 viewFriends('refresh',{
-layer:'#contactFilter',
+//layer:'#contactFilter',
 wrapper:$('.list-wrapper'),
 mod:'find',
 divider:lan('TAGBUM_CONTACTS','ucw'),
