--- a/local/xdk/newtag.html
+++ b/local/xdk/newtag.html
@@ -7,6 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Tagbum Mobile</title>
 <link rel="icon" href="css/smt/favicon.ico" type="image/png"/>
+
 <script src="cordova.js"></script>
 <link rel="stylesheet" href="css/jquery.mobile.custom.css"/>
 <link rel="stylesheet" href="css/jquery.mobile-1.3.2.css"/>
@@ -413,7 +414,7 @@ panzoom.panzoom('resetDimensions')
 
 if(CORDOVA){
 document.addEventListener('deviceready',function(){
-alert('Device ready no');
+//alert('Device ready no');
 var cam=Camera,
 photoData={
 targetWidth:650,
