--- a/local/xdk/newtag.html
+++ b/local/xdk/newtag.html
@@ -119,6 +119,9 @@
 <div id="title_pictures_shareTag" style="font-size:10px;text-align:center;height:15px;display:none;"></div>
 <div id="pictures_shareTag" style="height:40px;margin-bottom:10px;text-align:center;overflow:hidden;"></div>
 </div>
+<div>
+<input type="hidden" name="htxtVideo" id="htxtVideo" value="">
+</div>
 </div>
 <div class="clearfix"></div>
 </div>
@@ -452,11 +455,12 @@ var html = '<div id="shootMenu">'
 + '<p>Take either a Photo or Video</p>'
 + '<hr>'
 + '<a opc="shoot_p">'
-+ '<img src="css/newdesign/newtag/camera.png" height="80" >'
++ '<img src="css/newdesign/newtag/camera.png" width="80px" >'
 + '</a>'
 + '<a opc="shoot_v">'
-+ '<img src="css/newdesign/newtag/video_camera.png" height="80" >'
++ '<img src="css/newdesign/newtag/video_camera.png" width="80px" >'
 + '</a>'
++ '<p id="videot"></p>'
 + '</div>';
 
 myDialog({
@@ -470,71 +474,58 @@ $('#shootMenu').on('click', 'a[opc]', function(e){
 if ($(this).attr('opc')=='shoot_p'){
 navigator.camera.getPicture(onPhotoSuccess,onPhotoFail,data);
 }else{
+
 var cam=Camera,
-Log=function(text,clear){
-if(clear) $('#video').html('');
-$('#video').append(text+'<br/>');
-},
 galerySuccess=function(path_file){
 var file={
 fullPath:path_file,
 name:path_file.replace(/([^\/]*\/)*/g,'')
 };
-Log('galery success',true);
-console.log('galery success:',file);
 uploadFile({file:file});
 },
 captureSuccess=function(mediaFiles){
-var i,path,len;
-Log('capture success',true);
-// Log(JSON.stringify(mediaFiles));
+var i,len;
 for (i = 0, len = mediaFiles.length; i < len; i += 1) {
-path = mediaFiles[i].fullPath;
-// do something interesting with the file
-console.log(path);
-uploadFile({file:mediaFiles[i]});
+uploadFile(mediaFiles[i]);
 }
 },
 uploadFile=function(data){
-var path=data.file.fullPath,
-params=data.data||{},
-ft=new FileTransfer();
-params.fileName=data.file.name;
-Log('uploading...');
-ft.upload(path,
-"http://v.tagbum.com/upload.php",
-function(result){
-var data=JSON.parse(result.response);
-Log('Upload success: ' + result.responseCode);
-Log(result.bytesSent + ' bytes sent');
-Log('data:'+JSON.stringify(data));
-console.log('data:',data);
-if(data.urls[0])
-Log('First Link: <a href="http://v.tagbum.com/'+data.urls[0]+'">'+data.urls[0]+'</a>');
-},
-function(error){
-Log('Error uploading file ' + path + ': ' + error.code);
-},
-params
-);
-},
-// galeryError=function(){
-// Log('galery error',true);
-// console.log('galery error');
-// },
-captureError=function(error){
-navigator.notification.alert('Error code: '+error.code,null,'Capture Error');
-Log('capture error',true);
-console.log('capture error');
-};
 
-try{
-navigator.device.capture.captureVideo(captureSuccess,captureError,{limit:1});
-}catch(e){
-myDialog('Error: '+e);
+var fileURL=data.fullPath,
+params=data.data||{},
+ft = new FileTransfer();
+
+params = {
+fileName: data.name,
+data:{code:''},
+pending: { code:$.local('code'), folder:'pending'}
 }
 
+var options = new FileUploadOptions();
+options.fileName = data.name;
+options.mimeType = data.type;
+options.params = params;
 
+ft.upload(fileURL,
+encodeURI("http://v.tagbum.com/upload.php"),
+function(result){
+var data=JSON.parse(result.response);
+alert('data:'+JSON.stringify(data));
+// if(data.urls[0])
+// $('#videot'),html('<a href="http://v.tagbum.com/'+data.urls[0]+'">'+data.urls[0]+'</a>');
+},
+function(error){
+alert('Error uploading file, Error Code:: ' + error.code + ', Source: ' + error.source +', '+ error.target);
+},
+options
+);
+
+},
+captureError=function(error){
+navigator.notification.alert('Error code: '+error.code,null,'Capture Error');
+};
+
+navigator.device.capture.captureVideo(captureSuccess,captureError,{limit:1});
 }//else
 });
 }
