--- a/local/xdk/reportTag.html
+++ b/local/xdk/reportTag.html
@@ -34,6 +34,7 @@
 <script src="js/core/colorPicker.js"></script>
 <script src="js/core/currency/jquery.formatCurrency-1.4.0.js"></script>
 <script type="text/javascript" src="js/core/jquery.touchSwipe.min.js"></script>
+<script src="https://www.google.com/recaptcha/api.js"></script>
 <script src="js/min.js" charset="UTF-8"></script>
 
 <meta name="alexaVerifyID" content="8YYp0pS3o8YkprRdkaeFqitio5Q"/>
